examples/test/testpolicy944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy944
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key47: value47
      key45: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value39
          key24: value5
      podSelector:
        matchLabels:
          key33: value23
          key0: value41
          key20: value11
